Introduce ParseOnceJIT concept and flag.